--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@
 
             <div class="tilt-wrapper">
                 <div class="tilt-inner">
-                    <img src="images/SoftwarePreview.png" alt="Preview">
+                    <img src="images/SoftwarePreview1.png" alt="Preview">
                 </div>
             </div>
             
