--- a/index.html
+++ b/index.html
@@ -724,6 +724,7 @@
             height: auto;
             border-radius: 12px;
             pointer-events: none; /* wichtig: Mausinteraktion nur mit Container */
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
         }
 
 
