--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,9 @@
 
             <div class="tilt-wrapper">
                 <div class="tilt-inner">
-                    <img src="images/SoftwarePreview1.png" alt="Preview">
+                    <source media="(max-width: 768px)" srcset="images/AppPreview.png">
+                    <source media="(min-width: 769px)" srcset="images/SoftwarePreview.png">
+                    <img src="images/SoftwarePreview.png" alt="Loading...">
                 </div>
             </div>
             
