--- a/index.html
+++ b/index.html
@@ -1521,9 +1521,11 @@
 
             <div class="tilt-wrapper">
                 <div class="tilt-inner">
-                    <source media="(max-width: 768px)" srcset="images/AppPreview.png">
-                    <source media="(min-width: 769px)" srcset="images/SoftwarePreview.png">
-                    <img src="images/SoftwarePreview.png" alt="Loading...">
+                    <picture>
+                        <source media="(max-width: 768px)" srcset="images/AppPreview.png">
+                        <source media="(min-width: 769px)" srcset="images/SoftwarePreview.png">
+                        <img src="images/SoftwarePreview.png" alt="Loading...">
+                    </picture>
                 </div>
             </div>
             
