--- a/index.html
+++ b/index.html
@@ -727,6 +727,12 @@
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
         }
 
+        @media (max-width: 768px) {
+            .tilt-inner img {
+                width: 70%
+            }
+        }
+
 
         /* Products Section */
         .products {
@@ -1428,7 +1434,7 @@
         @keyframes fadeInMobile {
             from {
                 opacity: 0;
-                transform: scale(0.8);
+                transform: scale(0.2);
             }
             to {
                 opacity: 1;
