--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
                 <h2>Our products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                    <div class="product-image">📱</div>
+                    <img src="images/Icons/SubmarineIcon.png" alt="Loading...">
                     <div class="product-info">
                         <h3 class="product-name">Diver</h3>
                         <p class="product-description">Dip your toe through the surface.</p>
