--- a/index.html
+++ b/index.html
@@ -800,6 +800,12 @@
             overflow: hidden;
         }
 
+        .product-card img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
         .product-image::before {
             content: '';
             position: absolute;
@@ -1581,15 +1587,15 @@
                 <h2>Our products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                    <img src="images/Icons/SubmarineIcon.png" alt="Loading...">
-                    <div class="product-info">
-                        <h3 class="product-name">Diver</h3>
-                        <p class="product-description">Dip your toe through the surface.</p>
-                        <div class="product-price">$2/mo</div>
-                        <button class="view-product" onclick="openProductModal('diver')">
-                            Show details
-                        </button>
-                    </div>
+                        <img src="images/Icons/SubmarineIcon.png" alt="Loading...">
+                        <div class="product-info">
+                            <h3 class="product-name">Diver</h3>
+                            <p class="product-description">Dip your toe through the surface.</p>
+                            <div class="product-price">$2/mo</div>
+                            <button class="view-product" onclick="openProductModal('diver')">
+                                Show details
+                            </button>
+                        </div>
                     </div>
 
                     <div class="product-card">
