--- a/index.html
+++ b/index.html
@@ -802,7 +802,8 @@
 
         .product-card img {
             width: 100%;
-            height: auto;
+            height: 250px;
+            object-fit: cover;
             display: block;
         }
 
