--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@
                 <h2>Our products</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="images/Icons/SubmarineIcon.png" alt="Loading...">
+                        <img src="images/Icons/DiverIcon.png" alt="Loading...">
                         <div class="product-info">
                             <h3 class="product-name">Diver</h3>
                             <p class="product-description">Dip your toe through the surface.</p>
@@ -1600,7 +1600,7 @@
                     </div>
 
                     <div class="product-card">
-                        <div class="product-image">🎧</div>
+                        <img src="images/Icons/SubmarineIcon.png" alt="Loading...">
                         <div class="product-info">
                             <h3 class="product-name">Submarine</h3>
                             <p class="product-description">Dive right in and follow the whales.</p>
@@ -1612,7 +1612,7 @@
                     </div>
 
                     <div class="product-card">
-                        <div class="product-image">⌚</div>
+                        <img src="images/Icons/MosesIcon.png" alt="Loading...">
                         <div class="product-info">
                             <h3 class="product-name">Moses</h3>
                             <p class="product-description">Coming soon!</p>
