--- a/index.html
+++ b/index.html
@@ -1615,8 +1615,8 @@
                         <img src="images/Icons/MosesIcon.png" alt="Loading...">
                         <div class="product-info">
                             <h3 class="product-name">Moses</h3>
-                            <p class="product-description">Coming soon!</p>
-                            <div class="product-price">$ ~</div>
+                            <p class="product-description">More keys will be in stock soon!</p>
+                            <div class="product-price">Out of stock</div>
                             <button class="view-product" onclick="openProductModal('moses')">
                                 Show details
                             </button>
@@ -1865,7 +1865,7 @@
             },
             'moses': {
                 name: 'Moses',
-                price: 0,
+                price: 50,
                 icon: '⌚',
                 description: 'Fitness-Tracking und Smart-Features in einem stilvollen, minimalistischen Design. Diese Smartwatch ist der perfekte Begleiter für Sport, Gesundheit und den digitalen Alltag.',
                 features: [
