--- a/index.html
+++ b/index.html
@@ -669,8 +669,8 @@
 
         @media (max-width: 768px) {
             .stats-grid {
-                padding-left: 0px;
-                padding-right: 0px;
+                padding-left: 2rem;
+                padding-right: 2rem;
             }
         }
 
