--- a/index.html
+++ b/index.html
@@ -669,8 +669,13 @@
 
         @media (max-width: 768px) {
             .stats-grid {
+                display: flex;
                 padding-left: 0rem;
                 padding-right: 0rem;
+            }
+            .stat-grid * {
+                width: auto;
+                heigth: auto;
             }
         }
 
