--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             }
             .stat-grid * {
                 width: auto;
-                heigth: auto;
+                height: auto;
             }
         }
 
