--- a/index.html
+++ b/index.html
@@ -677,6 +677,10 @@
                 width: auto;
                 height: auto;
             }
+
+            .stat-card * {
+                width: auto;
+                height: auto;
         }
 
         .stat-card {
