--- a/index.html
+++ b/index.html
@@ -673,12 +673,13 @@
                 padding-left: 0rem;
                 padding-right: 0rem;
             }
-            .stat-grid * {
+
+            .stat-card {
                 width: auto;
                 height: auto;
             }
 
-            .stat-card * {
+            .stat-number {
                 width: auto;
                 height: auto;
             }
