--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     
     <style>
 
+        html {
+            -webkit-text-size-adjust: 100%;
+        }
+
         @font-face {
            font-family: 'HeadlineFont';
            src: url('fonts/Bezmiar-Regular.otf') format('opentype');
@@ -665,30 +669,6 @@
             margin-top: 1rem;
             padding-left: 100px;
             padding-right: 100px;
-        }
-
-        @media (max-width: 768px) {
-            .stats-grid {
-                display: flex;
-                justify-content: space-between;
-                padding: 0;
-            }
-
-            .stat-card {
-                flex: 1 1 0;
-                min-width: 0;
-                margin: 0 0.5rem;
-            }
-
-            /* Schriftgröße skaliert mit der Viewport-Breite, aber bleibt zwischen 1.5rem und 2.5rem */
-            .stat-number {
-                font-size: clamp(1.5rem, 8vw, 2.5rem);
-            }
-  
-            /* Optional: Label auch etwas anpassen */
-            .stat-label {
-                font-size: clamp(0.75rem, 3vw, 1rem);
-            }
         }
 
         .stat-card {
@@ -1476,6 +1456,30 @@
                 animation: fadeInMobile 2s ease-out forwards;
             }
         }
+
+        @media (max-width: 768px) {
+            .stats-grid {
+                display: flex;
+                justify-content: space-between;
+                padding: 0;
+            }
+            .stat-card {
+                flex: 1 1 0;
+                min-width: 0;
+                margin: 0 0.5rem;
+            }
+            .stat-number {
+                /* 1) Fallback für alte Browser: relativ zur Viewport-Breite */
+                font-size: 8vw;
+                /* 2) „echte“ Resizing‑Regel für moderne Browser */
+                font-size: clamp(1.5rem, 8vw, 2.2rem);
+                line-height: 1.1;
+            }
+            .stat-label {
+                font-size: clamp(0.75rem, 3vw, 1rem);
+            }
+        }
+
 
 
         .product-card:nth-child(1) { animation-delay: 0.1s; }
