--- a/downloads.html
+++ b/downloads.html
@@ -490,7 +490,9 @@
             <div class="container">
                 <div class="downloads-grid">
                     <div class="download-card">
-                        <div class="download-icon">🚢</div>
+                        <div class="download-icon">
+                            <img src="images/Icons/MosesIconSmall.png" alt="Loading...">
+                        </div>
                         <h3 class="download-title">Submarine</h3>
                         <p class="download-description">
                             The fitting Software for the Submarine-Membership
