--- a/downloads.html
+++ b/downloads.html
@@ -237,6 +237,11 @@
             font-weight: bold;
         }
 
+        .download-icon img {
+            width: 100%;
+            heigth: 100%;
+        }
+
         .download-title {
             font-size: 2rem;
             font-weight: bold;
