--- a/downloads.html
+++ b/downloads.html
@@ -496,7 +496,7 @@
                 <div class="downloads-grid">
                     <div class="download-card">
                         <div class="download-icon">
-                            <img src="images/Icons/MosesIconSmall.png" alt="Loading...">
+                            <img src="images/Icons/SubmarineIconSmall.png" alt="Loading...">
                         </div>
                         <h3 class="download-title">Submarine</h3>
                         <p class="download-description">
@@ -511,7 +511,9 @@
                     </div>
 
                     <div class="download-card">
-                        <div class="download-icon">⚡</div>
+                        <div class="download-icon">
+                            <img src="images/Icons/MosesIconSmall.png" alt="Loading...">
+                        </div>
                         <h3 class="download-title">Moses</h3>
                         <p class="download-description">
                             Coming soon!
