--- a/downloads.html
+++ b/downloads.html
@@ -226,7 +226,7 @@
         .download-icon {
             width: 80px;
             height: 80px;
-            background: linear-gradient(135deg, #0d0d0d, #101012);
+            background: #0f0f0f;
             border-radius: 50%;
             margin: 0 auto 20px;
             display: flex;
