--- a/index.html
+++ b/index.html
@@ -667,38 +667,19 @@
             padding-right: 100px;
         }
 
-        .stat-card {
-            text-align: center;
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.03);
-            border-radius: 12px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .stat-card:hover {
-            transform: translateY(-5px);
-            background: rgba(255, 255, 255, 0.05);
-        }
-
-        .stat-number {
-            font-size: 3rem;
-            font-weight: 700;
-            color: #005F4E;
-            margin-bottom: 0.5rem;
-        }
-
-        .stat-label {
-            color: #aaa;
-            font-size: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 3rem;
+            margin-top: 1rem;
+            padding-left: 100px;
+            padding-right: 100px;
         }
 
         @media (max-width: 768px) {
             .stats-grid {
-                padding-left: 0rem;
-                padding-right: 0rem;
+                padding-left: 0px;
+                padding-right: 0px;
             }
         }
 
