--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 3rem;
             margin-top: 1rem;
-            padding-left: 100px;
-            padding-right: 100px;
+            padding-left: 4rem;
+            padding-right: 4rem;
         }
 
         .stats-grid {
