--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         @font-face {
-            font-family: 'GoofyFont';
+            font-family: 'AltFont';
             src: url('fonts/Iceland-Regular.ttf') format('truetype');
             font-weight: 400;
         }
