--- a/index.html
+++ b/index.html
@@ -663,16 +663,10 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 3rem;
             margin-top: 1rem;
-            padding-left: 4rem;
-            padding-right: 4rem;
-        }
-
-
-        @media (max-width: 768px) {
-            .stats-grid {
-                padding-left: 0px;
-                padding-right: 0px;
-            }
+            padding-left: 100px;
+            padding-right: 100px;
+            margin-left: 4rem;
+            margin-right: 4rem;
         }
 
         .stat-card {
