--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             grid-template-columns: 1fr 1fr;
             gap: 6rem;
             align-items: center;
-            margin-bottom: 6rem;
+            margin-bottom: 4rem;
         }
 
         .info-content.centered {
@@ -665,8 +665,7 @@
             margin-top: 1rem;
             padding-left: 100px;
             padding-right: 100px;
-            margin-left: 4rem;
-            margin-right: 4rem;
+            max-width: 1000px;
         }
 
         .stat-card {
