--- a/index.html
+++ b/index.html
@@ -663,9 +663,9 @@
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 3rem;
             margin-top: 1rem;
-            padding-left: 100px;
-            padding-right: 100px;
-            max-width: 1000px;
+            width: 100vw;
+            place-content: center;   /* zusammengefasst für align-content + justify-content */
+            margin: 6rem auto;
         }
 
         .stat-card {
