--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
             gap: 3rem;
             margin-top: 1rem;
             place-content: center;   /* zusammengefasst für align-content + justify-content */
-            margin: 6rem auto;
+            margin: 6rem 6rem;
         }
 
         .stat-card {
