--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,8 @@
     }
 
 </script>
-
+    <!-- Eruda aus CDN laden -->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
 </body>
 </html>
